<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/home"
                android:title="Home"
                android:icon="@drawable/ic_home" />
            <item
                android:id="@+id/profile"
                android:title="@string/menu_profile_title"
                android:icon="@drawable/ic_profile" />
            <item
                android:id="@+id/notification"
                android:title="@string/menu_notification_title"
                android:icon="@drawable/ic_notifications" />
        </menu>
    </item>
    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/menu_settings_title"
                android:icon="@drawable/ic_settings" />
            <item
                android:id="@+id/policy"
                android:title="@string/menu_policy_title"
                android:icon="@drawable/ic_policy" />
            <item
                android:id="@+id/signOut"
                android:title="@string/sign_out_text"
                android:icon="@drawable/ic_sign_out" />
        </menu>
    </item>

</menu>