<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScreenOne">


        <TextView
            android:id="@+id/tv_onboarding_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/splash_screen_title_margin_top_size"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/Splash_screens_title"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/splash_onboarding_screens_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/splash_screen_onboarding_image_width"
            android:layout_height="@dimen/splash_screen_onboarding_image_height"
            android:layout_marginStart="@dimen/splash_screen_image_margin_start_size"
            android:layout_marginTop="@dimen/splash_screen_image_margin_top_size"
            android:layout_marginEnd="@dimen/splash_screen_image_margin_end_size"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ic_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_title" />

        <TextView
            android:id="@+id/tv_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/splash_screen_onboarding_title_margin_top_size"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/splash_screen_one_title"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/splash_screen_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_text4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/splash_screen_one_text"
            android:textColor="@color/ic_text_color"
            android:textSize="@dimen/splash_screen_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text3" />

        <TextView
            android:id="@+id/tv_btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="bottom"
            android:text="@string/skip_btn_text"
            android:textColor="@color/teal_200"
            android:textSize="@dimen/splash_screen_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>