<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/cl_screen_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.jinncyapps.cdacsam.splash.onboarding.screens.ScreenThree">

        <TextView
            android:id="@+id/tv_onboarding_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_44dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/onboardingtitle"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/x_text_size"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="240dp"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginTop="@dimen/space_42dp"
            android:layout_marginEnd="@dimen/space_default"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/tv_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_33dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/splash_screen_three_title"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/xx_text_size"
            />

        <TextView
            android:id="@+id/cl_screen_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:layout_gravity="center"
            android:text="@string/splash_screen_three_text"
            android:textColor="@color/ic_text_color"
            android:textSize="@dimen/x_text_size"
            />

        <TextView
            android:id="@+id/tv_btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/skip_btn_text"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginBottom="50dp"
            android:gravity="bottom"
            android:textColor="@color/teal_200"
            android:textSize="@dimen/x_text_size"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>