<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="15dp"
        tools:context=".ScreenFour">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/onboarding_image_two" />

        <TextView
            android:id="@+id/tv_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/splash_screen_four_title"
            android:textColor="@color/primary_text_color"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="top"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/splash_screen_four_text"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/x_text_size" />

        <TextView
            android:id="@+id/tv_btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="55dp"
            android:background="@drawable/shape_button_rounded_green"
            android:gravity="bottom"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/continue_btn_text"
            android:textColor="@color/white"
            android:textSize="@dimen/x_text_size"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>